--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         <ul>
 
             <li><a href="index.html">Home</a></li>
-            <li><a href="/about_me.html">about_me</a></li>
-            <li><a href="/my_skills.html">my_skills</a></li>
-            <li><a href="/my_projects.html">my_projects</a></li>
-            <li><a href="/my_education.html">my_education</a></li>
-            <li><a href="/my_gallery.html">my_gallery</a></li>
-            <li><a href="/contact_me.html">contact_me</a></li>
+            <li><a href="about_me.html">about_me</a></li>
+            <li><a href="my_skills.html">my_skills</a></li>
+            <li><a href="my_projects.html">my_projects</a></li>
+            <li><a href="my_education.html">my_education</a></li>
+            <li><a href="my_gallery.html">my_gallery</a></li>
+            <li><a href="contact_me.html">contact_me</a></li>
         </ul>
       </nav>
     </div>
